# fm_embeddings

./: .gitignore  __init__.py  prediction.tif  pyproject.toml  test_dataset.sh
configs/: dataset.yaml  eval.yaml  inference.yaml  predict.yaml  train.yaml
configs/dataset/: cassurina.yaml  casurina.yaml  eucalyptus.yaml  forest.yaml  negatives  non_forest.yaml  subabul.yaml
configs/experiments/: rf_aef_v1.yaml
configs/inference/model/: kmeans.yaml
experiments/gsc/rf_aef_gsc_v1/: rf_aef_gsc_v1_report.txt
experiments/rf_aef_v1/: eval_aus.txt  rf_aef_v1_report.txt
experiments/rf_aef_v2/: rf_aef_v2_report.txt
experiments/rf_aef_v4/: eval_aus_lulc.txt  rf_aef_v4_report.txt
experiments/rf_aef_v5/: rf_aef_v5_report.txt
experiments/rf_aef_v6/: rf_aef_v6_report.txt
notebooks/: AEFxForestryxClustering.ipynb
outputs/2025-08-27/15-04-23/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-27/15-47-46/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-27/15-47-56/.hydra/: hydra.yaml
outputs/2025-08-27/15-48-16/.hydra/: config.yaml  hydra.yaml
pipeline/: create_dataset.py  create_dataset_aef.py  eval.py  inference.py  predict.py  train.py
src/: __init__.py  utils.py
src/data/: aef_fetch.py
src/dataset/: aef.py  tes.py
src/evaluate/: eval.py
src/inference/: aef.py  kmeans.py  rf.py  tes.py
src/model_handler/: rf.py
src/predict/: __init__.py  kmeans_batch_predict.py  rf_batch_predict.py
src/trainer/: kmeans.py  rf.py
tests/aef_datahandler/: test_aef_datahandlerl.py
tests/aef_datahandler.py/: test_aef_datahandlerl.py
(+175 files in other folders)
