[project]
name = "forest-cover"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "geotessera>=0.5.2",
    "hvplot[all]>=0.12.0",
    "hydra-core>=1.3.2",
    "mapminer>=0.1.56",
    "omegaconf>=2.3.0",
    "scikit-learn>=1.7.1",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
